// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Headings Section Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <h2
      class="Text-sc-1wu7vpu-0-h2 heWDlS"
      font-size="larger"
      font-weight="medium"
    >
      Section Title
    </h2>
  </div>
</div>
`;

exports[`Storyshots Headings Subsection Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <h3
      class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 hTTFeG"
      font-size="large"
      font-weight="medium"
    >
      SubsectionTitle
    </h3>
  </div>
</div>
`;

exports[`Storyshots Headings Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <h1
      class="Text-sc-1wu7vpu-0-h1 VooJu"
      font-size="largest"
      font-weight="light"
    >
      Title
    </h1>
  </div>
</div>
`;

exports[`Storyshots Headings With a custom margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <h1
      class="Text-sc-1wu7vpu-0-h1 fKaScO"
      font-size="largest"
      font-weight="light"
    >
      Title
    </h1>
    <p
      class="Text-sc-1wu7vpu-0 RbfMK"
      color="currentColor"
      font-size="medium"
    >
      Lorem ipsum
    </p>
  </div>
</div>
`;
